// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NestedInput with usePhoneNumber renders without crashing, matches snapshot 1`] = `
<div>
  <div
    id="PickUpUI"
  >
    <div>
      <form
        action="#"
      >
        <div
          class="PU--root-0-2-1 PU--root-d0-0-2-8"
        >
          <div
            class="PU--inputContainer-0-2-2"
          >
            <div
              class="PU--phoneContainer-0-2-4"
            >
              <div
                class="PU--phonePrefix-0-2-5"
              >
                +1
              </div>
              <input
                autocomplete="tel"
                class="PU--input-0-2-3 PU--input-d1-0-2-9"
                name="nestedInput"
                placeholder="(345) 555-2343"
                type="tel"
                value=""
              />
            </div>
          </div>
          <div>
            <input
              class="PU--root-0-2-10 PU--root-d0-0-2-14 PU--phoneButtonSmall-0-2-7"
              data-testid="pickup-button"
              type="submit"
              value="Click Button"
            />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`NestedInput with useVerificationCode renders without crashing, matches snapshot 1`] = `
<div>
  <div
    id="PickUpUI"
  >
    <div>
      <form
        action="#"
      >
        <div
          class="PU--root-0-2-1 PU--root-d0-0-2-8"
        >
          <div
            class="PU--inputContainer-0-2-2"
          >
            <input
              class="PU--input-0-2-3 PU--input-d1-0-2-9"
              id="nestedInput"
              name="nestedInput"
              placeholder="Placeholder text"
              value=""
            />
          </div>
          <div>
            <input
              class="PU--root-0-2-10 PU--root-d0-0-2-14 PU--phoneButtonSmall-0-2-7"
              data-testid="pickup-button"
              type="submit"
              value="Click Button"
            />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Standard NestedInput renders without crashing, matches snapshot 1`] = `
<div>
  <div
    id="PickUpUI"
  >
    <div>
      <form
        action="#"
      >
        <div
          class="PU--root-0-2-1 PU--root-d0-0-2-8"
        >
          <div
            class="PU--inputContainer-0-2-2"
          >
            <input
              class="PU--input-0-2-3 PU--input-d1-0-2-9"
              id="nestedInput"
              name="nestedInput"
              placeholder="Placeholder text"
              value=""
            />
          </div>
          <div>
            <input
              class="PU--root-0-2-10 PU--root-d0-0-2-14"
              data-testid="pickup-button"
              type="submit"
              value="Click Button"
            />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
